--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://front-end-jony-reyes-yqg8.vercel.app/">Jony Reyes</a>.
+    Coded by <a href="https://front-end-jony-reyes-yqg8.vercel.app/" target="_blank">Jony Reyes</a>.
   </div>
 </body>
 </html>
