--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
  </div>
     </div>
 </main>
-  
+  <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://front-end-jony-reyes-yqg8.vercel.app/" target="_blank">Jony Reyes</a>.
   </div>
+  </footer>  
 </body>
 </html>
